# bike-sharing

./: .gitignore  README.md  dvc.yaml  pyproject.toml
src/: load_data.py  split_data.py  train.py
src/app/: main.py
src/ml/: train.py
src/ml/data/: data_config.yaml  data_load.py  split_data.py
src/ml/model/: model_config.yaml  model_load.py
