[project]
name = "bike-sharing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.10.0",
    "pandas>=2.2.0,<3.0.0",  # Capping pandas to satisfy MLflow
    "scikit-learn>=1.5.0",   # Note: 1.8.0 does not exist yet; 1.6.1 is current latest
    "protobuf<5.0.0",        # Keeps the 'service' module available
]